# FantasyFootball

./: LICENSE  README.md  pyproject.toml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/config/: config.py
backend/app/models/: connect.py  db_connect.py  db_tables.py  fixtures.py  match_events.py  models_definitions.py  player.py  positions.py  results.py  team.py
backend/app/parsing/: getting_data.py
